Show seconds in showcase and fix medal overlap

--- a/src/styles/modules/_resets.sass
+++ b/src/styles/modules/_resets.sass
@@ -4,3 +4,4 @@
   background: none
   border-radius: 0
   border: none
+  cursor: pointer
