--- a/src/styles/partials/_showcase.sass
+++ b/src/styles/partials/_showcase.sass
@@ -73,6 +73,10 @@
       opacity: 1
       transform: scale(1)
 
+  &__team-info
+    position: relative
+    z-index: 2
+
   &__rank
     font-size: 1rem
     font-weight: 300
